--- a/harness/.harness/reactJS.yaml
+++ b/harness/.harness/reactJS.yaml
@@ -342,6 +342,15 @@ pipeline:
                                     outputVariables: []
                                     executionTarget: {}
                                 timeout: 10m
+                          - step:
+                                type: TerraformDestroy
+                                name: Destroy
+                                identifier: Destroy
+                                spec:
+                                    provisionerIdentifier: staging_s3
+                                    configuration:
+                                        type: InheritFromApply
+                                timeout: 10m
                       rollbackSteps:
                           - step:
                                 name: Rollback Rollout Deployment
