--- a/harness/.harness/Reset.yaml
+++ b/harness/.harness/Reset.yaml
@@ -40,3 +40,68 @@ pipeline:
                                           spec:
                                               state: "off"
                                 timeout: 10m
+                          - step:
+                                type: FlagConfiguration
+                                name: Index
+                                identifier: Index
+                                spec:
+                                    feature: Index_Gesture
+                                    environment: Production
+                                    instructions:
+                                        - identifier: SetFeatureFlagStateIdentifier
+                                          type: SetFeatureFlagState
+                                          spec:
+                                              state: "off"
+                                timeout: 10m
+                          - step:
+                                type: FlagConfiguration
+                                name: Victory
+                                identifier: Victory
+                                spec:
+                                    feature: Victory_Gesture
+                                    environment: Production
+                                    instructions:
+                                        - identifier: SetFeatureFlagStateIdentifier
+                                          type: SetFeatureFlagState
+                                          spec:
+                                              state: "off"
+                                timeout: 10m
+                          - step:
+                                type: FlagConfiguration
+                                name: Okay
+                                identifier: Okay
+                                spec:
+                                    feature: Okay_Gesture
+                                    environment: Production
+                                    instructions:
+                                        - identifier: SetFeatureFlagStateIdentifier
+                                          type: SetFeatureFlagState
+                                          spec:
+                                              state: "off"
+                                timeout: 10m
+                          - step:
+                                type: FlagConfiguration
+                                name: ThumbsUp
+                                identifier: ThumbsUp
+                                spec:
+                                    feature: ThumbsUp_Gesture
+                                    environment: Production
+                                    instructions:
+                                        - identifier: SetFeatureFlagStateIdentifier
+                                          type: SetFeatureFlagState
+                                          spec:
+                                              state: "off"
+                                timeout: 10m
+                          - step:
+                                type: FlagConfiguration
+                                name: ThumbsDown
+                                identifier: ThumbsDown
+                                spec:
+                                    feature: ThumbsDown_Gesture
+                                    environment: Production
+                                    instructions:
+                                        - identifier: SetFeatureFlagStateIdentifier
+                                          type: SetFeatureFlagState
+                                          spec:
+                                              state: "off"
+                                timeout: 10m
