Update pipeline Reset

--- a/harness/.harness/Reset.yaml
+++ b/harness/.harness/Reset.yaml
@@ -114,5 +114,6 @@ pipeline:
                                     method: GET
                                     headers: []
                                     outputVariables: []
+                                    assertion: <+httpResponseCode> == 200
                                 timeout: 10s
                   serviceDependencies: []
