--- a/harness/.harness/reactJS.yaml
+++ b/harness/.harness/reactJS.yaml
@@ -4,7 +4,7 @@ pipeline:
     projectIdentifier: GestureRecognition
     orgIdentifier: default
     tags:
-        node: "17.3.1"
+        node: 17.3.1
         react: 17.0.2
         tensorflowjs: 3.7.0
         featureflags: ""
