--- a/harness/.harness/reactJS.yaml
+++ b/harness/.harness/reactJS.yaml
@@ -102,6 +102,10 @@ pipeline:
                                     image: <+Build_and_Publish.variables.node_version>
                                     command: npm run build
                                     privileged: false
+                                    resources:
+                                        limits:
+                                            memory: 1Gi
+                                            cpu: "1.0"
                           - parallel:
                                 - step:
                                       type: SaveCacheS3
