Update pipeline reactJS

--- a/harness/.harness/reactJS.yaml
+++ b/harness/.harness/reactJS.yaml
@@ -298,3 +298,24 @@ pipeline:
                   - name: AWS_SECRET_ACCESS_KEY
                     type: Secret
                     value: aws_secret_key
+        - stage:
+              name: DarkMode
+              identifier: DarkMode
+              description: ""
+              type: FeatureFlag
+              spec:
+                  execution:
+                      steps:
+                          - step:
+                                type: FlagConfiguration
+                                name: EnableDarkMode
+                                identifier: EnableDarkMode
+                                spec:
+                                    feature: Dark_Mode
+                                    environment: Production
+                                    instructions:
+                                        - identifier: SetFeatureFlagStateIdentifier
+                                          type: SetFeatureFlagState
+                                          spec:
+                                              state: "on"
+                                timeout: 10m
