--- a/harness/.harness/reactJS.yaml
+++ b/harness/.harness/reactJS.yaml
@@ -76,7 +76,9 @@ pipeline:
                                     connectorRef: mansongdockerhub
                                     image: <+Build_and_Publish.variables.node_version>
                                     shell: Sh
-                                    command: npm install
+                                    command: |-
+                                        npm install
+                                        npm run build
                                     privileged: false
                           - step:
                                 type: Run
@@ -85,6 +87,7 @@ pipeline:
                                 spec:
                                     connectorRef: mansongdockerhub
                                     image: <+Build_and_Publish.variables.node_version>
+                                    shell: Sh
                                     command: npm test
                                     privileged: false
                                     reports:
@@ -100,7 +103,10 @@ pipeline:
                                 spec:
                                     connectorRef: mansongdockerhub
                                     image: <+Build_and_Publish.variables.node_version>
-                                    command: npm run build
+                                    shell: Sh
+                                    command: |-
+                                        npm install
+                                        npm run build
                                     privileged: false
                                     resources:
                                         limits:
