Update pipeline reactJS

--- a/harness/.harness/reactJS.yaml
+++ b/harness/.harness/reactJS.yaml
@@ -108,6 +108,8 @@ pipeline:
                                     image: <+Build_and_Publish.variables.node_version>
                                     shell: Sh
                                     command: |-
+                                        rm -rf node_modules
+                                        rm -rf package-lock.json
                                         npm install
                                         npm run build
                                     privileged: false
