Update pipeline reactJS

--- a/harness/.harness/reactJS.yaml
+++ b/harness/.harness/reactJS.yaml
@@ -111,6 +111,7 @@ pipeline:
                                         rm -rf node_modules
                                         rm -rf package-lock.json
                                         npm install
+                                        npm i react-scripts
                                         npm run build
                                     privileged: false
                                     resources:
