--- a/harness/.harness/reactJS.yaml
+++ b/harness/.harness/reactJS.yaml
@@ -41,6 +41,7 @@ pipeline:
                                 failureStrategies: []
                                 when:
                                     stageStatus: Success
+                                    condition: "false"
                           - parallel:
                                 - step:
                                       type: Run
