--- a/harness/.harness/reactJS.yaml
+++ b/harness/.harness/reactJS.yaml
@@ -78,12 +78,7 @@ pipeline:
                                     connectorRef: mansongdockerhub
                                     image: <+Build_and_Publish.variables.node_version>
                                     shell: Sh
-                                    command: |-
-                                        rm -rf node_modules
-                                        rm -rf package-lock.json
-
-                                        npm install
-                                        ls -larht
+                                    command: npm install
                                     privileged: false
                           - step:
                                 type: Run
